# nix-diff

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  ci.dhall  ci.sh  default.nix  flake.nix  garnix.yaml  nix-blame.cabal  nix-diff.cabal  nix-diff.nix  release.nix  shell.nix
.github/workflows/: ci.yaml
app/: Main.hs
golden-tests/: expected-output  run-test.sh
golden-tests/derivations/complex/new/: flake.nix
golden-tests/derivations/complex/old/: flake.nix
golden-tests/derivations/simple/new/: drv.nix
golden-tests/derivations/simple/old/: changed-file  drv.nix
golden-tests/expected-outputs/: json  json-squashed  skip-already-compared
golden-tests/new-derivation/: changed-file  drv.nix  new-file
golden-tests/old-derivation/: drv.nix  missing-file
nix/: nix-derivation.nix
src/: Diff.hs  Main.hs
src/Nix/: Diff.hs
src/Nix/Diff/: Store.hs  Transformations.hs  Types.hs
src/Nix/Diff/Render/: Common.hs  HTML.hs  HumanReadable.hs
src/Render/: HumanReadable.hs
test/: Main.hs  Properties.hs
test/Golden/: Tests.hs  Utils.hs
