name:                nix-diff
version:             1.0.18
synopsis:            Explain why two Nix derivations differ
description:         This package provides a @nix-diff@ executable which
                     explains why two Nix derivations (i.e. @*.drv@ files)
                     differ
homepage:            https://github.com/Gabriella439/nix-diff
license:             BSD3
license-file:        LICENSE
author:              Gabriella Gonzalez
maintainer:          GenuineGabriella@gmail.com
copyright:           2017 Gabriella Gonzalez
category:            System
build-type:          Simple
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.8.3
cabal-version:       >= 1.10
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:
    Nix.Diff
    Nix.Diff.Types
    Nix.Diff.Transformations
    Nix.Diff.Render.HumanReadable
  build-depends:       base                 >= 4.9      && < 5
                     , attoparsec           >= 0.13     && < 0.15
                     , aeson
                     , bytestring           >= 0.9      && < 0.12
                     , containers           >= 0.5      && < 0.7
                     , directory                           < 1.4
                     , mtl                  >= 2.2      && < 2.3
                     , nix-derivation       >= 1.1      && < 1.2
                     , optparse-applicative >= 0.14.0.0 && < 0.18
                     , patience             >= 0.3      && < 0.4
                     , text                 >= 1.2      && < 1.3
                     , vector               >= 0.12     && < 0.13
                     , process                             < 1.7
                     , filepath                            < 1.5
                     , QuickCheck                          < 2.15
                     , quickcheck-instances                < 3.29
                     , generic-arbitrary                   < 1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable nix-diff
  main-is:             Main.hs

  build-depends:       base
                     , nix-diff
                     , aeson
                     , bytestring
                     , optparse-applicative >= 0.14.0.0 && < 0.17
                     , text
                     , unix                                < 2.8
                     , containers
                     , mtl
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite nix-diff-test
  main-is:             Main.hs

  other-modules:
    Properties
    Golden.Tests
    Golden.Utils

  type:                exitcode-stdio-1.0

  build-depends:       base
                     , nix-diff
                     , aeson
                     , bytestring
                     , text
                     , containers
                     , mtl
                     , typed-process     < 0.2.11
                     , tasty             < 1.5
                     , tasty-quickcheck  < 0.11
                     , tasty-silver      < 3.4

  hs-source-dirs:      test

  default-language:    Haskell2010
  ghc-options:         -Wall
