cabal-version:       3.0
name:                nix-diff
version:             1.0.21
synopsis:            Explain why two Nix derivations differ
description:         This package provides a @nix-diff@ executable which
                     explains why two Nix derivations (i.e. @*.drv@ files)
                     differ
homepage:            https://github.com/Gabriella439/nix-diff
license:             BSD-3-Clause
license-file:        LICENSE
author:              Gabriella Gonzalez
maintainer:          GenuineGabriella@gmail.com
copyright:           2024 Gabriella Gonzalez
category:            System
build-type:          Simple
tested-with:         GHC == 9.2.8,
                     GHC == 9.4.7,
                     GHC == 9.6.3
extra-source-files:  README.md
                     CHANGELOG.md

common language
  default-language:    GHC2021
  default-extensions:
    ApplicativeDo,
    BlockArguments,
    DeriveAnyClass,
    DerivingStrategies,
    DerivingVia,
    DuplicateRecordFields,
    LambdaCase,
    MultiWayIf,
    NamedFieldPuns,
    NoFieldSelectors,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
  ghc-options:         -Wall

library
  import: language
  hs-source-dirs:      src

  exposed-modules:
    Nix.Diff
    Nix.Diff.Store
    Nix.Diff.Types
    Nix.Diff.Transformations
    Nix.Diff.Render.HumanReadable

  build-depends:       base                 >= 4.9      && < 5
                     , attoparsec           >= 0.13     && < 0.15
                     , aeson
                     , bytestring           >= 0.9      && < 0.13
                     , containers           >= 0.5      && < 0.8
                     , directory                           < 1.4
                     , mtl                  >= 2.2      && < 2.4
                     , nix-derivation       >= 1.1      && < 1.2
                     , optparse-applicative >= 0.14.0.0 && < 0.19
                     , patience             >= 0.3      && < 0.4
                     , text                 >= 1.2      && < 2.2
                     , vector               >= 0.12     && < 0.14
                     , process                             < 1.7
                     , filepath                            < 1.6
                     , QuickCheck                          < 2.16
                     , quickcheck-instances                < 3.29
                     , generic-arbitrary                   < 1.1
                     , uniplate                            < 1.17

executable nix-diff
  import: language
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base
                     , nix-diff
                     , aeson
                     , bytestring
                     , optparse-applicative
                     , text
                     , unix                                < 2.9
                     , containers
                     , mtl

test-suite nix-diff-test
  import: language
  ghc-options:         -Wall

  hs-source-dirs:      test
  main-is:             Main.hs

  other-modules:
    Properties
    Golden.Tests
    Golden.Utils

  type:                exitcode-stdio-1.0

  build-depends:       base
                     , nix-diff
                     , aeson
                     , bytestring
                     , text
                     , containers
                     , mtl
                     , typed-process     < 0.2.12
                     , tasty             < 1.6
                     , tasty-quickcheck  < 0.11
                     , tasty-silver      < 3.4
